--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ body {
   font-family: 'Arial', sans-serif;
   background-color: #f9f9f9;
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
@@ -18,4 +17,10 @@ body {
 
 .game-board {
   grid-template-columns: repeat(3, 1fr);
+}
+
+.margin-b {
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid gray;
 }
